Fixed the alignment of Logos in login/signup modals and added consistent close icons.

--- a/source/assets/stylesheets/_home.scss
+++ b/source/assets/stylesheets/_home.scss
@@ -581,6 +581,11 @@ footer {
   border: 0;
   border-radius: 0;
 
+  @include tablet {
+    width: 400px;
+    margin-top: 10%;
+  }
+
   .lead {
     color: $font-gray;
     font-family: $raleway-font;
@@ -607,27 +612,35 @@ footer {
 
     a {
       color: $font-gray;
-      font-size: 38px;
+      font-size: 42px;
       display: inline-block;
-      margin: 0 20px;
+      margin: 0 20px 20px;
       width: 86px;
       height: 40px;
       text-align: center;
+      vertical-align: top;
     }
 
     .ic-chef-supermarket {
-      background: url("../images/login/chef-supermarket.png") no-repeat 0 5px;
+      background: url("../images/login/chef-supermarket.svg") no-repeat 0 3px;
     }
   }
+}
 
-  a.reveal-modal {
+//Consistent close icon for all the reveal modal
+.reveal-modal {
+  a.close-reveal-modal {
     position: absolute;
-    top: 20px;
+    top: 10px;
     right: 18px;
   }
 
   .ic-close {
     background: url("../images/login/ic-close.svg") no-repeat;
+  }
+
+  .ic-close-blue {
+    background: url("../images/login/ic-close-blue.png") no-repeat;
   }
 
   .icon {
@@ -647,14 +660,6 @@ footer {
   & + &:last-child {
     float: $default-float;
   }
-}
-
-.close-video-modal {
-  position: absolute;
-  right: 20px;
-  top: 0;
-  color: $font-gray;
-  font-size: 32px;
 }
 
 #socialShare {
